2015-02-20  Olaf Bergmann  <bergmann@tzi.org>

	* coap_list.[hc]: Moved old list implementation into
	sub-directory examples and replaced by linked lists
	from utlist.h. As a result, the list must be sorted
	explicitly with LL_SORT).

2015-02-19  Olaf Bergmann  <bergmann@tzi.org>

	* net.c (coap_send_confirmed): Fixed retransmission timeout
	calculation and renamed transmission parameters according to
	Section 4.8 of RFC 7252.

2014-06-18  Olaf Bergmann  <bergmann@tzi.org>

	* mem.c (coap_malloc_type): New functions for allocating memory.
	On POSIX systems, coap_malloc_type() and coap_free_type() are just
	wrapper functions for malloc() and free(), while on Contiki and
	LWIP distinct arrays are used for each type.

2014-03-09  Olaf Bergmann  <bergmann@tzi.org>

	* net.c (coap_cancel): Removed 7.31 again and implemented new
	method for cancelling observe relationships.

2014-02-25  Olaf Bergmann  <bergmann@tzi.org>

	* net.c (coap_cancel): Handling of 7.31 responses to cancel
	notifications (see Section 4.6 of draft-ietf-core-observe-12)

2014-02-04  Olaf Bergmann  <bergmann@tzi.org>

	* resource.c (coap_print_link): This function now takes an offset
	where printing starts. This is used for generating blocks on the
	fly.

	* net.c (wellknown_response): Added support for Block2 options
	when generating a response for .well-known/core.

	* block.h (coap_opt_block_num): Fixed handling of zero-length
	options. COAP_OPT_BLOCK_LAST now returns NULL when the option
	value's length is zero.

2014-01-07  Olaf Bergmann  <bergmann@tzi.org>

	* resource.c (coap_print_link): Output partial resource
	descriptions. The function now provides a sliding window over the
	textual representation of the resource. Output starts at the given
	offset and ends at the buffer's upper bound. The meaning of the
	return value has changed to allow distinguishing whether or not
	the resource description has been truncated at the buffer's upper
	bound.